--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body class="fundo">
     <center>
-        <h2>Digte o signo desejado:
+        <h2>Escolha o signo desejado:
             <input type="text" placeholder="Informe um texto" id="valor">
             <button onclick="MudaDesenho()">Elevar Cosmo!</button>
             <h2>
